# development-sandbox

./: README.md
data-pipeline/: go.mod
docs/: gcp-logging-guide.md
golang-todo-app/: .gitignore  go.mod
golang/example-sse/: README.md  go.mod
golang/fan-in-pattern/: go.mod
golang/financial-ai-agent/: README.md  go.mod  go.sum  mise.toml
golang/fx-quickstart/: go.mod  go.sum
golang/go-adk-quickstart/: .gitignore  README.md  go.mod  go.sum
golang/go-idempotent/: go.mod
golang/gotodo-api/: .dockerignore  go.mod  go.sum  sqlc.yaml
golang/mcp-quickstart/: go.mod
golang/outbox-pattern/: .envrc  .gitignore  README.md  go.mod
golang/postgres-pattern/: .envrc  go.mod
golang/sqlc-quickstart/: docker-compose.yaml  go.mod  main.go  query.sql  schema.sql  sqlc.yaml
golang/state-pattern/: README.md  go.mod  main.go
golang/strategy-pattern/: README.md  go.mod
golang/vector-search-quickstart/: docker-compose.yaml  go.mod  go.sum
golang/waca-go/: README.md  go.mod  go.sum
golang/wire-quickstart/: go.mod
nodejs/pptx-automizer-quickstart/: .gitignore  README.md  index.js  package.json  pnpm-lock.yaml
python/adk-quickstart/: main.py  pyproject.toml
python/adk-quickstart/agents/weather_agent/: agent.py
python/adk-quickstart/multi_tool_agent/: agent.py
python/google-agentic-stack/: .envrc  .gitignore  main.py  pyproject.toml
python/google-sheets-reader/: .gitignore  main.py  pyproject.toml
python/pdf2markdown-converter/: pdf2markdown_converter.py  pyproject.toml
python/vector-search-grounding/: main.py  pyproject.toml
rust/axum-pastebin/: Cargo.toml
rust/axum-pastebin/src/: main.rs
rust/axum-shortener/: Cargo.toml
rust/axum-todo/: Cargo.toml
rust/cli-pattern/: Cargo.toml  README.md
rust/dependecy-injection/: Cargo.toml  README.md
rust/file-io-patterns/: Cargo.toml  README.md
rust/mutex-everywhere/: Cargo.toml
rust/reliable-job/: .gitignore  Cargo.toml  README.md
rust/reliable-job/deployments/: docker-compose.yaml
rust/reliable-job/migrations/: 20251009035936_init.down.sql  20251009035936_init.up.sql
rust/reliable-job/src/: db.rs  jobs.rs  main.rs  models.rs
(+143 files in other folders)
