[project]
name = "google-sheets-reader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google>=3.0.0",
    "gspread>=6.2.1",
    "gspread-dataframe>=4.0.0",
    "pandas>=2.3.3",
    "pydrive>=1.3.1",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
