[package]
name = "reliable-job"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = [
  "chrono",
  "postgres",
  "runtime-tokio-native-tls",
  "uuid",
] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "time"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
